<resources>
    <string name="app_name">PokeApp</string>
    <string name="id">id</string>
    <string name="height">height</string>
    <string name="height_unit">dm</string>
    <string name="weight">weight</string>
    <string name="weight_unit">hg</string>
    <string name="base_experience">base exp.</string>
    <string name="types">types</string>
    <string name="abilities">abilities</string>
</resources>